--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,10 @@ jobs:
     executor: machine_executor_amd64
     steps:
       - checkout
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 0.14.2
       - terraform/init:
           path: .
       - terraform/validate:
