--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
           path: .
       - terraform/apply:
           path: .
-      - terraform/destroy:
-          path: .
+#      - terraform/destroy:
+#          path: .
 
 workflows:
   terratest:
