--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,11 @@ jobs:
       - terraform/install:
           arch: amd64
           os: linux
-          terraform_version: 0.14.2
+          terraform_version: 1.12.2
       - terraform/init:
           path: .
-#      - terraform/validate:
-#          path: .
+      - terraform/validate:
+          path: .
       - terraform/plan:
           path: .
       - terraform/apply:
